objects/Request_CIM_Broadcast__e.object
<CustomObject>
    <description>This platform even will alert the MuleSoft team to query GCRM and generate a payload to send to Workfront. Trigger when the &quot;Request CIM&quot; field on opportunity is checked.</description>
    <fields>
        <fullName>Account_GUID__c</fullName>
        <label>Account GUID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_GUID__c</fullName>
        <label>Opportunity GUID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Id__c</fullName>
        <label>Quote Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <label>Quote Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Request CIM Broadcast</label>
    <pluralLabel>Request CIM Broadcasts</pluralLabel>
</CustomObject>